# WikiToolkit

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_links.ipynb  demo_pageviews.ipynb  demo_quality.ipynb  demo_redirects.ipynb  demo_revisions.ipynb  demo_topics.ipynb  linkdemo.ipynb  pageviewsdemo.ipynb  pyproject.toml  redirectsdemo.ipynb  requirements.txt  revisionsdemo.ipynb  setup.py
data/: topviews-2024_07_31.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wikitools/: __init__.py  api.py  dumps.py  links.py  pageviews.py  redirects.py  revisions.py  tools.py  wikitools.py
tests/: test_wikitools.py
