[tool.poetry]
name = "wikitools"
version = "0.1.0"
description = "Useful functions for Wikipedia API and dumps"
authors = ["Patrick Gildersleve"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
